// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers App matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiPaper-root makeStyles-root-2 makeStyles-root-4 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="makeStyles-root-33"
      >
        <a
          class="MuiAvatar-root makeStyles-avatar-32 MuiAvatar-colorDefault"
          href="#/"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
            />
          </svg>
        </a>
        <div
          class="makeStyles-titleWrap-34"
        >
          <h5
            class="MuiTypography-root makeStyles-brandFont-35 MuiTypography-h5"
          >
            Of Note
            <small>
              <em>
                s
              </em>
            </small>
          </h5>
          <h6
            class="MuiTypography-root makeStyles-brandFont-35 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Offline note taking
          </h6>
        </div>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root"
          href="https://github.com/jhackshaw/ofnotes"
          tabindex="0"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1-.7.1-.7.1-.7 1.2 0 1.9 1.2 1.9 1.2 1 1.8 2.8 1.3 3.5 1 0-.8.4-1.3.7-1.6-2.7-.3-5.5-1.3-5.5-6 0-1.2.5-2.3 1.3-3.1-.2-.4-.6-1.6 0-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8 0 3.2.9.8 1.3 1.9 1.3 3.2 0 4.6-2.8 5.6-5.5 5.9.5.4.9 1 .9 2.2v3.3c0 .3.1.7.8.6A12 12 0 0 0 12 .3"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="makeStyles-filter-3"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-90 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input"
              name="filter"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
            Search tags or titles
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <ul
        class="MuiList-root MuiList-padding"
      />
    </div>
    <div
      class="makeStyles-root-176"
    >
      <form>
        <div
          class="makeStyles-formHeader-174"
        >
          <span
            class="MuiTypography-root MuiTypography-h5"
          >
            New Note
          </span>
          <button
            aria-label="save note"
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-91 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Save 
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-172"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-90 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
          >
            Title
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input"
              name="title"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
             
          </p>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-90 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
          >
            Note
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          >
            <textarea
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-173 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
              name="md"
              rows="2"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
            Supports Github flavored markdown
          </p>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-90 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
          >
            Tags
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input"
              name="tags"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
            Separated by spaces
          </p>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`containers CreateNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-219"
  >
    <form>
      <div
        class="makeStyles-formHeader-217"
      >
        <span
          class="MuiTypography-root MuiTypography-h5"
        >
          New Note
        </span>
        <button
          aria-label="save note"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-251 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            Save 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-215"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-250 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="title"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-351 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-352"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-250 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-216 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            name="md"
            rows="2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-351 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-352"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Supports Github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-250 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="tags"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-351 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-352"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Separated by spaces
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers EditNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-376"
  >
    <form>
      <div
        class="makeStyles-formHeader-374"
      >
        <span
          class="MuiTypography-root MuiTypography-h5"
        >
          New Note
        </span>
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-deleteBtn-372 MuiButton-contained makeStyles-btn-408 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Delete 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-371"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-408 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          href="#/undefined"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            View 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-371"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-407 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="title"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-508 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-509"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-407 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-373 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            name="md"
            rows="2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-508 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-509"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Supports Github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-407 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="tags"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-508 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-509"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Separated by spaces
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers NoteDisplay matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-532"
  >
    <span
      class="MuiTypography-root MuiTypography-h5"
    />
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-564 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
      href="#/undefined/edit"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiButton-label"
      >
        Edit 
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-529"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
    <div
      class="makeStyles-content-528"
    />
    <div
      class="makeStyles-tags-531"
    />
  </div>
</DocumentFragment>
`;

exports[`containers SideBar matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root makeStyles-root-615 makeStyles-root-617 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="makeStyles-root-646"
    >
      <a
        class="MuiAvatar-root makeStyles-avatar-645 MuiAvatar-colorDefault"
        href="#/"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
          />
        </svg>
      </a>
      <div
        class="makeStyles-titleWrap-647"
      >
        <h5
          class="MuiTypography-root makeStyles-brandFont-648 MuiTypography-h5"
        >
          Of Note
          <small>
            <em>
              s
            </em>
          </small>
        </h5>
        <h6
          class="MuiTypography-root makeStyles-brandFont-648 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Offline note taking
        </h6>
      </div>
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root"
        href="https://github.com/jhackshaw/ofnotes"
        tabindex="0"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1-.7.1-.7.1-.7 1.2 0 1.9 1.2 1.9 1.2 1 1.8 2.8 1.3 3.5 1 0-.8.4-1.3.7-1.6-2.7-.3-5.5-1.3-5.5-6 0-1.2.5-2.3 1.3-3.1-.2-.4-.6-1.6 0-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8 0 3.2.9.8 1.3 1.9 1.3 3.2 0 4.6-2.8 5.6-5.5 5.9.5.4.9 1 .9 2.2v3.3c0 .3.1.7.8.6A12 12 0 0 0 12 .3"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="makeStyles-filter-616"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-703 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
          data-shrink="true"
        >
          Filter
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="filter"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-764 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-765"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Search tags or titles
        </p>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <ul
      class="MuiList-root MuiList-padding"
    />
  </div>
</DocumentFragment>
`;
